example/advanced/hostnames-matchtype/27-gw-empty-route-empty-match-prefix/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-http
spec:
  parentRefs:
  - name: hug-gateway
    sectionName: http
  - name: hug-gateway
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    backendRefs:
    - name: http-echo
      port: 80
---
